--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Marketing, Internet Marketing, Email, Internet, Local Advertisement, Business Solutions, Advertisement">
     <meta name="author" content="Mr Michael T Finley">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BetterGrassNow-Index</title>
+    <title>BetterGrassNow - Index</title>
     <link rel="icon" type="image/png" href="./assets/img/Lawnmower.png">
     <!-- CSS Link -->
     <link rel="stylesheet" href="./assets/style.css">
@@ -46,7 +46,6 @@
         nav .logo {
             font-size: 24px;
             color: #00bcd4;
-            text-decoration: none;
         }
 
         nav ul {
@@ -85,26 +84,26 @@
         /* Header */
         .header-container {
             display: flex;
-            justify-content: space-between; /* Align sections side by side */
+            justify-content: space-between;
             align-items: center;
             padding: 20px;
-            gap: 20px; /* Space between sections */
+            gap: 20px;
         }
 
         .header-left {
-            flex: 1; /* Grow to fill available space */
-            max-width: 50%; /* Limit to half the container width */
+            flex: 1;
+            max-width: 50%;
         }
 
         .header-right {
             flex: 1;
-            text-align: center; /* Center the image */
+            text-align: center;
             max-width: 50%;
         }
 
         .header-right img {
-            width: 100%; /* Make image responsive */
-            max-width: 300px; /* Limit max size */
+            width: 100%;
+            max-width: 300px;
             height: auto;
         }
 
@@ -135,6 +134,19 @@
         .header-action-aria a:hover {
             background-color: #00bcd4;
             color: #000;
+        }
+
+        /* Price Calculator Section */
+        #map {
+            width: 100%;
+            height: 400px;
+            border: 2px solid #00bcd4;
+            border-radius: 8px;
+        }
+
+        #price {
+            font-weight: bold;
+            color: #00bcd4;
         }
 
         /* Footer */
@@ -191,6 +203,7 @@
             <ul>
                 <li><a href="./index.html" class="active">HOME</a></li>
                 <li><a href="./services/services.html">SERVICES</a></li>
+                <li><a href="./quote.html" class="active">YARD ESTIMATOR</a></li>                
                 <li><a href="./about/about.html">ABOUT US</a></li>
                 <li><a href="./User_login/login.html">LOGIN</a></li>
             </ul>
@@ -205,7 +218,7 @@
         <div class="header-container container">
             <div class="header-left">
                 <div class="card">
-                    <h1>Better&nbsp;Grass&nbsp;Now<br>is a leader in lawn care!</h1>
+                    <h1>BetterGrassNow<br>is a leader in lawn care!</h1>
                     <p>
                         I'm Michael, a lawn-care specialist local to South Florida. While cutting grass to make it through
                         college, I decided to create this platform. Our goal is to connect local lawn care professionals
@@ -230,15 +243,51 @@
         <a href="./contact/contact.html">Contact us</a> | <a href="./sitemap.php">Sitemap</a> | <a href="./terms.php">Terms</a>
     </footer>
 
-    <!-- Script -->
+    <!-- Google Maps Script -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKDaeM44PW2vCysbp-FaiqHoGp1C8aoo0&libraries=drawing,geometry"></script>
+    <script>
+        let map;
+        let drawingManager;
+        let selectedShape = null;
+
+        function initMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: { lat: 25.7617, lng: -80.1918 },
+                zoom: 14,
+            });
+
+            drawingManager = new google.maps.drawing.DrawingManager({
+                drawingMode: google.maps.drawing.OverlayType.POLYGON,
+                drawingControl: true,
+                polygonOptions: { editable: true, draggable: true },
+            });
+
+            drawingManager.setMap(map);
+
+            google.maps.event.addListener(drawingManager, 'overlaycomplete', (event) => {
+                if (selectedShape) selectedShape.setMap(null);
+                selectedShape = event.overlay;
+                calculateArea(selectedShape);
+            });
+        }
+
+        function calculateArea(shape) {
+            const area = google.maps.geometry.spherical.computeArea(shape.getPath());
+            const areaInSqFt = area * 10.7639; // Convert meters² to square feet
+            const price = (areaInSqFt * 0.00667).toFixed(2); // Adjusted price per square foot
+            document.getElementById('price').innerText = `$${price}`;
+        }
+
+        window.onload = initMap;
+    </script>
+
     <script>
         const menuButton = document.querySelector('.menubutton');
         const navLinks = document.querySelector('nav ul');
-
-        menuButton.addEventListener('click', () => {
-            navLinks.classList.toggle('show');
-        });
+        menuButton.addEventListener('click', () => navLinks.classList.toggle('show'));
     </script>
 </body>
 
 </html>
+
+
