--- a/quote.html
+++ b/quote.html
@@ -248,7 +248,7 @@
     </footer>
 
     <!-- Google Maps Script -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKDaeM44PW2vCysbp-FaiqHoGp1C8aoo0&libraries=drawing,geometry"></script>
+    <script src="put google api here"></script>
     <script>
         let map;
         let drawingManager;
