--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <!-- Footer -->
     <footer>
         2023-2024 BetterGrassNow&copy;<br>
-        <a href="./contact/contact.html">Contact us</a> | <a href="./sitemap.php">Sitemap</a> | <a href="./terms.php">Terms</a>
+        <a href="./contact/contact.html">Contact us</a> | <a href="./sitemap.html">Sitemap</a> | <a href="./terms.html">Terms</a>
     </footer>
 
     <script>
