--- a/404.html
+++ b/404.html
@@ -54,7 +54,7 @@
   <body>
     <main>
       <h1>BetterGrassNow.com</h1>
-      <p>Our website is under construction. Please visit again soon.</p>
+      <p>Our website is under construction.</p>
     </main>
   </body>
 
