--- a/sitemap.html
+++ b/sitemap.html
@@ -162,10 +162,11 @@
             <div class="container">
                 <a href="./index.html" class="logo">BetterGrassNow</a>
                 <ul>
-                	<li><a href="./index.html">HOME</a></li>
-                	<li><a href="./services/services.html">SERVICES</a></li>
-                	<li><a href="./about/about.html">ABOUT US</a></li>
-                	<li><a href="./User_login/login.html">LOGIN</a></li>
+                <li><a href="./index.html" class="active">HOME</a></li>
+                <li><a href="./services/services.html">SERVICES</a></li>
+                <li><a href="./quote.html" class="active">YARD ESTIMATOR</a></li>                
+                <li><a href="./about/about.html">ABOUT US</a></li>
+                <li><a href="./contact.html">CONTACT ME</a></li>
             	</ul>
             </div>
         </nav>
