--- a/contact.html
+++ b/contact.html
@@ -191,7 +191,7 @@
                 <li><a href="./services/services.html">SERVICES</a></li>
                 <li><a href="./quote.html" class="active">YARD ESTIMATOR</a></li>                
                 <li><a href="./about/about.html">ABOUT US</a></li>
-                <li><a href="./User_login/login.html">LOGIN</a></li>
+                <li><a href="./contact.html">CONTACT ME</a></li>
             </ul>
             <button class="menubutton"><img src="../assets/img/menu.png" alt="menu"></button>
         </div>
