--- a/service_requests.html
+++ b/service_requests.html
@@ -170,11 +170,11 @@
                     <i class="fas fa-bars"></i>
                 </div>
                 <ul>
-                    <li><a href="../User_profile/home.php">HOME</a></li>
-                    <li><a href="../User_profile/inbox.php">INBOX</a></li>
-                    <li><a href="../User_profile/services.php">REQUEST A QUOTE</a></li>
-                    <li><a href="../User_profile/service_requests.php">SERVICE LOG</a></li>
-                    <li><a href="logout.php">SIGN OUT</a></li>
+                <li><a href="./index.html" class="active">HOME</a></li>
+                <li><a href="./services/services.html">SERVICES</a></li>
+                <li><a href="./quote.html" class="active">YARD ESTIMATOR</a></li>                
+                <li><a href="./about/about.html">ABOUT US</a></li>
+                <li><a href="./contact.html">CONTACT ME</a></li>
                 </ul>
             </div>
         </nav>
