--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     </footer>
 
     <!-- Google Maps Script -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKDaeM44PW2vCysbp-FaiqHoGp1C8aoo0&libraries=drawing,geometry"></script>
+    <script src="map key here"></script>
     <script>
         let map;
         let drawingManager;
