--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@
         <div class="container">
             <a href="./index.html" class="logo">BetterGrassNow</a>
             <ul>
-                <li><a href="./index.html" class="active">HOME</a></li>
-                <li><a href="./services/services.html">SERVICES</a></li>
-                <li><a href="./quote.html" class="active">YARD ESTIMATOR</a></li>                
-                <li><a href="./about/about.html">ABOUT US</a></li>
-                <li><a href="./contact.html">CONTACT ME</a></li>
+                <li><a href="https://decreased-summary-gpl-eden.trycloudflare.com/index.html" class="active">HOME</a></li>
+                <li><a href="https://decreased-summary-gpl-eden.trycloudflare.com/services/services.html">SERVICES</a></li>
+                <li><a href="https://decreased-summary-gpl-eden.trycloudflare.com/quote.html" class="active">YARD ESTIMATOR</a></li>                
+                <li><a href="https://decreased-summary-gpl-eden.trycloudflare.com/about/about.html">ABOUT US</a></li>
+                <li><a href="https://decreased-summary-gpl-eden.trycloudflare.com/User_login/login.html">CONTACT ME</a></li>
             </ul>
             <button class="menubutton">
                 <img src="./assets/img/menu.png" alt="menu">
