--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="container">
             <a href="./index.html" class="logo">BetterGrassNow</a>
             <ul>
-                <li><a href=" https://contributions-proc-worth-ties.trycloudflare.com " class="active">HOME</a></li>
+                <li><a href="https://contributions-proc-worth-ties.trycloudflare.com">HOME</a></li>
                 <li><a href="https://contributions-proc-worth-ties.trycloudflare.com/services/services.html">SERVICES</a></li>
                 <li><a href="https://contributions-proc-worth-ties.trycloudflare.com/quote.html" class="active">YARD ESTIMATOR</a></li>                
                 <li><a href="https://contributions-proc-worth-ties.trycloudflare.com/about/about.html">ABOUT US</a></li>
